# Yakutan

./: .gitignore  LICENSE.md  README.md  app_state.py  audio_capture.py  audio_debug_recorder.py  audio_resampler.py  audio_runtime_guard.py  bridge.md  config.py  hot_words_manager.py  ipc_client.py  llm_client.py  main.py  openai_compat_client.py  osc_manager.py  panel_app.py  patch_auto_expand.js  proxy_detector.py  pytest.ini  recognition_handler.py  requirements-local-asr.txt  requirements.txt  run_ui.py  run_ui.spec  run_ui_local_asr.spec  runtime_hook_local_asr.py  runtime_hook_std.py  terminology_manager.py  test_local_asr.py  text_processor.py  translation_pipeline.py  udp_port_check.py  vrcx_context_bridge.py
.Jules/: palette.md
docs/: Qwen-MT-API.md  Qwen-MT-简介.md  context.mdx  local-vad-gating.md  manual-finalization.mdx
examples/: llm_client_usage.py  qwen_mt_usage.py
hot_words/: en.txt  zh-cn.txt
language_detectors/: cjke_detector.py
local_asr/: __init__.py  asr_funasr_nano.py  asr_qwen3.py  asr_sensevoice.py  model_manager.py  vad_processor.py
shared/: vrchat_bridge.py  vrchat_text_limits.py
speech_recognizers/: base_speech_recognizer.py  dashscope_speech_recognizer.py  doubao_file_speech_recognizer.py  local_speech_recognizer.py  (+3 more)
streaming_translation/: README.md  __init__.py  _config.py  _proxy.py  pipeline.py  pyproject.toml
streaming_translation/api/: __init__.py  base.py  deepl.py  google_dictionary.py  google_web.py  openrouter.py  qwen_mt.py
streaming_translation/core/: __init__.py  context_aware.py  smart_language.py
ui/: app.py
(+46 files in other folders)
